--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
     "framer-motion": "^11.11.17",
     "locomotive-scroll": "^5.0.0-beta.21",
     "motion": "^11.11.17",
